vista movil  terminada

--- a/src/app/index/home/home.component.html
+++ b/src/app/index/home/home.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="texto-principal">texto principal</div>
+  <div class="texto-principal">Texto principal</div>
 
   <div class="texto-secundario">
     <p class="parrafo-secundario">
@@ -10,7 +10,7 @@
 
   <div class="componente-informativo">
     <img class="caritas-negras"
-      src="img/caritas-negras@2x.png"
+      src="../../../assets/img/caritas-negras@2x.png"
       alt="caritas negras"
     />
     <div class="flex-col">
@@ -18,7 +18,7 @@
         Texto sobre otro elemento
       </div>
 
-      <div class="botn-7">botón</div>
+      <div class="btn botn-7">botón</div>
     </div>
   </div>
 </main>
