--- a/src/app/index/second-page/second-page.component.html
+++ b/src/app/index/second-page/second-page.component.html
@@ -1,1 +1,24 @@
-<p>second-page works!</p>
+<main>
+    <div class="texto-principal">Second Page</div>
+  
+    <div class="texto-secundario">
+      <p class="parrafo-secundario">
+        Texto secundario texto secundario texto secundario texto secundario texto
+        secundario texto secundario
+      </p>
+    </div>
+  
+    <div class="componente-informativo">
+      <img class="caritas-negras"
+        src="img/caritas-negras@2x.png"
+        alt="caritas negras"
+      />
+      <div class="flex-col">
+        <div class="texto-sobre-otro-elemento-texto-sobre-otro-elemento">
+          Texto sobre otro elemento
+        </div>
+  
+        <div class="botn-7">botón</div>
+      </div>
+    </div>
+  </main>
