--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,9 @@
 <header>
     <div class="logo"></div>
-    <div class="btn">boton</div>
-    <div class="btn">boton</div>
-    <div class="btn">boton</div>
+    <nav>
+        <div class="btn">boton</div>
+        <div class="btn">boton</div>
+        <div class="btn">boton</div>
+    </nav>
+    
 </header>
