--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,9 +1,5 @@
 <header>
-    <div class="logo"></div>
-    <nav>
-        <div class="btn">boton</div>
-        <div class="btn">boton</div>
-        <div class="btn">boton</div>
-    </nav>
-    
+
+<app-hamburguer [datoEntrada]="valor"></app-hamburguer>
+
 </header>
