--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
+<div class="container">
+    <app-header></app-header>
+<!-- <app-hamburguer></app-hamburguer> -->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+</div>
