realice ruteo del menu hamburguesa

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,16 @@
     font-family: var(--font-family-inter);
     font-size: var(--font-size-s);
     font-weight: 500;
+    width: fit-content;
+    border-radius: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 35px;
+}
+
+.btn:hover{
+  cursor: pointer;
 }
 
 html,body{
