--- a/src/app/components/hamburguer/hamburguer.component.css
+++ b/src/app/components/hamburguer/hamburguer.component.css
@@ -5,7 +5,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* padding: 0 10px; */
   width: 100%;
   height: 67px;
   margin: 0 auto;
@@ -14,6 +13,12 @@ nav{
   display: flex;
   justify-content: space-around;
   gap: 100px;
+}
+button{
+  background-color: transparent;
+  margin-right: 10px;
+  outline: none;
+  border: none;
 }
 .dropdown-content{
   width: 25%;
@@ -36,7 +41,6 @@ nav{
     align-items: center;
     padding: 10px 0;
     width: 99vw;
-    /* width: 1182px; */
     height: 67px;
     margin: 0 auto;
   }
@@ -52,11 +56,15 @@ nav{
     justify-content: center;
     gap: 15px;
   }
+  .logo{
+    margin-left:10px ;
+  }
 
   .show {
     position: absolute;
     top: 67px;
     right: 10px;
+    width: 150px;
     height: 150px;
     background-color: var(--black);
     color: aliceblue;
