--- a/src/app/index/second-page/second-page.component.css
+++ b/src/app/index/second-page/second-page.component.css
@@ -3,45 +3,74 @@ main {
   height: 85vh;
   background-color: var(--white);
   overflow-y: scroll;
-
-  &::-webkit-scrollbar {
-    background-color: transparent;
-    display: none;
-  }
-
-  table {
-    width: 100%;
-    height: 100%;
-    border-collapse: collapse;
-    text-align: center;
-    font-family: var(--font-family-inter);
-    font-size: var(--font-size-s);
-    font-weight: 500;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: 2px;
-    width: 100%;
-    color: var(--black);
-    margin: 0 auto;
-    border: 1px solid var(--black);
-
-    th {
-      background-color: rgb(8, 41, 69);
-      color: var(--white);
-    }
-
-    tr {
-      border: 1px solid rgba(123, 123, 122, 0.228);
-    }
-    td{
-      padding-top: 1.5rem;
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+&::-webkit-scrollbar {
+  background-color: transparent;
+  display: none;
+}
+table {
+  width: 100%;
+  height: 100%;
+  border-collapse: collapse;
+  text-align: center;
+  font-family: var(--font-family-inter);
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: normal;
+  margin-top: 2px;
+  width: 100%;
+  color: var(--black);
+  margin: 0 auto;
+  border: 1px solid var(--black);
 }
 
-.truncate-tex{
+th {
+  background-color: rgb(8, 41, 69);
+  color: var(--white);
+  border-right: 2px solid chartreuse;
+}
+
+th span {
+  cursor: pointer;
+}
+/*th td{
+   padding: 5px 10px;
+}
+tr {
+  border: 1px solid rgba(123, 123, 122, 0.228);
+  display: flex;
+  align-items: center;
+}
+td{
+  padding-top: 1.5rem;
+} */
+
+/* .truncate-tex{
   width: 230px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+} */
+.search {
+  width: 100%;
+  height: 50px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+input {
+  width: 80%;
+  border: none;
+  padding: 10px;
+  display: flex;
+  align-content: baseline;
+  font-size: var(--font-size-s);
+}
+/* @media (min-width: 768px) and (max-width: 1440px) {
+
+} */
